@@ -22,6 +22,7 @@
 package org.openspcoop2.core.registry.rest;
 
 import java.io.File;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -147,7 +148,7 @@ public class AccordoServizioWrapperUtilities {
 				try{
 					String location = as.getWsdlConcettuale();
 					if(location.startsWith("http://") || location.startsWith("file://")){
-						URL url = new URL(location);
+						URL url = new URI(location).toURL();
 						specifica = HttpUtilities.requestHTTPFile(url.toString());
 					}
 					else{
@@ -248,7 +249,7 @@ public class AccordoServizioWrapperUtilities {
 					String location = allegato.getFile();
 					try{
 						if(location.startsWith("http://") || location.startsWith("file://")){
-							URL url = new URL(location);
+							URL url = new URI(location).toURL();
 							resource = HttpUtilities.requestHTTPFile(url.toString());
 							systemId = (new File(url.getFile())).getName();
 						}
@@ -309,7 +310,7 @@ public class AccordoServizioWrapperUtilities {
 					String location = specificaSemiformale.getFile();
 					try{
 						if(location.startsWith("http://") || location.startsWith("file://")){
-							URL url = new URL(location);
+							URL url = new URI(location).toURL();
 							resource = HttpUtilities.requestHTTPFile(url.toString());
 							systemId = (new File(url.getFile())).getName();
 						}
