@@ -29,6 +29,7 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.math.BigInteger;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 import javax.xml.namespace.QName;
@@ -60,7 +61,7 @@ public final class TrasmissioneFatture_TrasmissioneFatturePort_Client {
                 if (wsdlFile.exists()) {
                     wsdlURL = wsdlFile.toURI().toURL();
                 } else {
-                    wsdlURL = new URL(args[0]);
+                    wsdlURL = new URI(args[0]).toURL();
                 }
             } catch (MalformedURLException e) {
                 e.printStackTrace();
