@@ -22,6 +22,7 @@ package org.openspcoop2.example.pdd.client.identificasoggetto;
 import java.io.File;
 import java.io.FileInputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import javax.xml.namespace.QName;
 import jakarta.xml.ws.BindingProvider;
@@ -138,7 +139,7 @@ public final class IdentificaSoggetto_IdentificaSoggettoInterfaceEndpoint_Client
 				if (wsdlFile.exists()) {
 					wsdlURL = wsdlFile.toURI().toURL();
 				} else {
-					wsdlURL = new URL(args[0]);
+					wsdlURL = new URI(args[0]).toURL();
 				}
 			} catch (MalformedURLException e) {
 				e.printStackTrace();
