@@ -28,6 +28,7 @@ package org.openspcoop2.example.server.rpc.literal.stub_namespace_ridefinito;
 import java.io.File;
 import java.io.FileInputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Date;
 import java.util.GregorianCalendar;
@@ -58,7 +59,7 @@ public final class ServiceRPCLiteral_ServiceRPCLiteral_Client {
                 if (wsdlFile.exists()) {
                     wsdlURL = wsdlFile.toURI().toURL();
                 } else {
-                    wsdlURL = new URL(args[0]);
+                    wsdlURL = new URI(args[0]).toURL();
                 }
             } catch (MalformedURLException e) {
                 e.printStackTrace();
